fix: adjust links contrast in dark mode

--- a/assets/scss/_registry.scss
+++ b/assets/scss/_registry.scss
@@ -43,3 +43,9 @@
 a {
   color: darken($link-color, 15%);
 }
+
+[data-bs-theme="dark"] {
+  a {
+    color: lighten($link-color, 30%);
+  }
+}
